# dtu_mlops

./: .gitignore  datasets.dvc  requirements_exercises.txt
.dvc/: config
.github/workflows/: code_formatting.yml  tests.yaml
s1_development_environment/exercise_files/: 1_Tensors_in_PyTorch.ipynb  2_Neural_Networks_in_PyTorch.ipynb  3_Training_Neural_Networks.ipynb  4_Fashion_MNIST.ipynb  5_Inference_and_Validation.ipynb  6_Saving_and_Loading_Models.ipynb
s1_development_environment/package_manager/: index.html
s2_organisation_and_version_control/M6/myproject/: LICENSE  README.md  data.dvc  index.html  pyproject.toml  requirements.txt  tasks.py
s2_organisation_and_version_control/M6/myproject/dockerfiles/: evaluate.dockerfile  train.dockerfile
s2_organisation_and_version_control/M6/myproject/docs/: index.html  mkdocs.yaml
s2_organisation_and_version_control/M6/myproject/docs/source/: index.html
s2_organisation_and_version_control/M6/myproject/models/: model.pth
s2_organisation_and_version_control/M6/myproject/src/project/: data.py  train.py
s2_organisation_and_version_control/M6/myproject/tests/: test_data.py  test_model.py
s3_reproducibility/exercise_files/: config.yaml  model.py  vae_mnist.py
s4_debugging_and_logging/exercise_files/: profile.prof  profile.txt
s6_the_cloud/exercise_files/: cloudbuild.yaml  config.yaml  file.dockerfile
s6_the_cloud/using_the_cloud/: index.html
s7_deployment/exercise_files/: main.py
s7_deployment/ml_deployment/: index.html
search/: search_index.json
